--- a/view_categories.html
+++ b/view_categories.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Contect-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
 </head>
 
 <body>
@@ -17,7 +16,7 @@
       <a href="index.html"><img class="logo" src="imgs/logo.png" alt="logo"></a>
     </div>
     <div class="title">
-      <h1>Wallpaper house</h1>
+      <h1>Wallpapers house</h1>
     </div>
     <div class="options">
       <a class="links" href="view_registration.html">Registrate</a>
@@ -25,17 +24,25 @@
       <div class="search">
         <form class="form-inline" action="">
           <input class="form-control" type="search" name="query" placeholder="Buscar...">
-          <input class="btn btn-success" type="submit" value="buscar">
+          <button class="btn btn-success" type="submit" value="buscar">
+            <img src="imgs/search-alt-2-regular-24.png" alt="buscar">
+          </button>
         </form>
       </div>
     </div>
     <div class="menu-hidden">
-      <button>Menu</button>
+      <img src="imgs/menu-regular-24.png" alt="menu">
     </div>
   </header>
   <div class="body">
     <nav class="my-nav">
       <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link d-none" href="view_profile.html">Iniciar sesión</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link d-none" href="view_registration.html">Resgistrate</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" href="view_categories.html">Fondos recientes</a>
         </li>
@@ -79,47 +86,47 @@
         <div class="container-fluid">
           <h2>Categoria</h2>
           <div class="row">
-            <div class="col-4">
+            <div class="col-4 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-4">
+            <div class="col-4 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-4">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-4">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4">
-              <img src="imgs/basico.png" alt="imagen">
-            </div>
-            <div class="col-4">
+            <div class="col-4 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
           </div>
           <div class="row">
-            <div class="col-4">
+            <div class="col-4 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-4">
+            <div class="col-4 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-4">
+            <div class="col-4 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
           </div>
-            <nav aria-label="Page navigation example">
-              <ul class="pagination justify-content-center">
-                <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
-              </ul>
-            </nav>
+          <div class="row">
+            <div class="col-4 responsive">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4 responsive">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+            <div class="col-4 responsive">
+              <img src="imgs/basico.png" alt="imagen">
+            </div>
+          </div>
+          <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+              <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+            </ul>
+          </nav>
         </div>
       </section>
     </article>
@@ -135,6 +142,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
