--- a/view_profile.html
+++ b/view_profile.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Contect-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
 </head>
 
 <body>
@@ -17,23 +17,31 @@
       <a href="index.html"><img class="logo" src="imgs/logo.png" alt="logo"></a>
     </div>
     <div class="title">
-      <h1>Wallpaper house</h1>
+      <h1>Wallpapers house</h1>
     </div>
     <div class="options">
       <div class="search">
         <form class="form-inline" action="">
           <input class="form-control" type="search" name="query" placeholder="Buscar...">
-          <input class="btn btn-success" type="submit" value="buscar">
+          <button class="btn btn-success" type="submit" value="buscar">
+            <img src="imgs/search-alt-2-regular-24.png" alt="buscar">
+          </button>
         </form>
       </div>
     </div>
     <div class="menu-hidden">
-      <button>Menu</button>
+      <img src="imgs/menu-regular-24.png" alt="menu">
     </div>
   </header>
   <div class="body">
     <nav class="my-nav">
       <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link d-none" href="view_profile.html">Iniciar sesión</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link d-none" href="view_registration.html">Resgistrate</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" href="view_categories.html">Fondos recientes</a>
         </li>
@@ -79,12 +87,12 @@
             <div class="col-3">
               <img class="logo" src="imgs/profile.png" alt="imagen">
             </div>
-            <div class="col-6">
+            <div class="col-6 align-self-center">
               <p>Nombre usuario</p>
               <p>Correo</p>
               <p>Teléfono</p>
             </div>
-            <div class="col-3">
+            <div class="col-3 align-self-center">
               <div class="upload">
                 <form action="">
                   <input type="file" hidden>
@@ -96,64 +104,78 @@
         </div>
       </section>
       <section class="destacados">
+        <div class="mb-5">
+
+          <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
+            <div class="gallery-cell"><img src="imgs/basico.png" alt="imagen"></div>
+            <div class="gallery-cell"><img src="imgs/basico.png" alt="imagen"></div>
+            <div class="gallery-cell"><img src="imgs/basico.png" alt="imagen"></div>
+            <div class="gallery-cell"><img src="imgs/basico.png" alt="imagen"></div>
+            <div class="gallery-cell"><img src="imgs/basico.png" alt="imagen"></div>
+            <div class="gallery-cell"><img src="imgs/basico.png" alt="imagen"></div>
+            <div class="gallery-cell"><img src="imgs/basico.png" alt="imagen"></div>
+          </div>
+        </div>
+      </section>
+      <section class="destacados d-none">
         <div class="container-fluid">
           <h2>Imagenes favoritas</h2>
           <div class="row">
-            <div class="col-1">
+            <div class="col-1 align-self-center">
               <div class="previous">
-                <button>Anterior</button>
+                <img src="imgs/left-arrow.png" alt="" srcset="">
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-1">
-              <div class="previous">
-                <button>Siguiente</button>
+            <div class="col-1 align-self-center">
+              <div class="next">
+                <img src="imgs/right-arrow.png" alt="" srcset="">
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="recientes">
+      <section class="recientes d-none">
         <div class="container-fluid">
           <h2>Mis imagenes</h2>
           <div class="row">
-            <div class="col-1">
+            <div class="col-1 align-self-center">
               <div class="previous">
-                <button>Anterior</button>
+                <img src="imgs/left-arrow.png" alt="" srcset="">
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-2">
+            <div class="col-2 responsive">
               <img src="imgs/basico.png" alt="imagen">
             </div>
-            <div class="col-1">
+            <div class="col-1 align-self-center">
               <div class="next">
-                <button>Siguiente</button>
+                <img src="imgs/right-arrow.png" alt="" srcset="">
               </div>
             </div>
           </div>
@@ -172,6 +194,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
