--- a/view_registration.html
+++ b/view_registration.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
 </head>
 
 <body>
@@ -17,7 +16,7 @@
       <a href="index.html"><img class="logo" src="imgs/logo.png" alt="logo"></a>
     </div>
     <div class="title">
-      <h1>Wallpaper house</h1>
+      <h1>Wallpapers house</h1>
     </div>
     <div class="options">
       <a class="links" href="view_registration.html">Registrate</a>
@@ -25,17 +24,25 @@
       <div class="search">
         <form class="form-inline" action="">
           <input class="form-control" type="search" name="query" placeholder="Buscar...">
-          <input class="btn btn-success" type="submit" value="buscar">
+          <button class="btn btn-success" type="submit" value="buscar">
+            <img src="imgs/search-alt-2-regular-24.png" alt="buscar">
+          </button>
         </form>
       </div>
     </div>
     <div class="menu-hidden">
-      <button>Menu</button>
+      <img src="imgs/menu-regular-24.png" alt="menu">
     </div>
   </header>
   <div class="body">
     <nav class="my-nav">
       <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link d-none" href="view_profile.html">Iniciar sesión</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link d-none" href="view_registration.html">Resgistrate</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" href="view_categories.html">Fondos recientes</a>
         </li>
@@ -95,7 +102,9 @@
               <label for="">Repentir contraseña</label>
               <input type="password" class="form-control" id="">
             </div>
-            <button type="submit" class="btn btn-primary">Registrate</button>
+            <div class="row">
+              <button type="submit" class="btn btn-primary mx-auto">Registrate</button>
+            </div>
           </form>
         </div>
       </section>
@@ -112,6 +121,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
